Resources/Public/Css/backend.less
/* ... */
.status-select {
	width: auto;
	margin: 0 !important;
	display: inline-block;
	float: left;

	.spinner {
		display: none;
		margin-top: 1px;
		margin-left: 2px;
		width: auto;
		float: left;
		height: 20px;
	}

	.spinner-active {
		display: block;
	}

	select {
		float: left;
		border: none;
		margin-top: 2px;
		margin-left: -3px;
		background-color: transparent;
		cursor: pointer;

		&.list {
			-webkit-appearance: none;
			-moz-appearance: none;
			appearance: none;
		}

		option {
			text-align: right;
		}

		&:focus {
			border: none;
		}
	}
}

#show-spinner {
	float: left;
	width: auto;
	margin-top: 0 !important;
	float: left;
}

.dashboard {
	width: 100%;
	margin: 0;
	height: 100%;

	.top {
		margin-top: 2rem;
		padding: 0 10%;

		h3 {
			text-align: center;
			margin: 1rem 0;
		}
	}

	.middle {
		padding: 5% 10%;
		display: flex;
		flex-wrap: wrap;
		flex-direction: row;
		justify-content: center;
		width: 100%;
		position: absolute;
		height: 100%;
		top: 0;

		.button-box {
			display: inline-block;
			background-color: var(--typo3-state-primary-bg, #0078e6);
			border: 0.2rem solid var(--typo3-state-primary-border-color, #005db3);
			width: 26vh;
			height: 26vh;
			padding: 1rem;
			box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
			text-align: center;
			color: var(--typo3-state-primary-color, #fff);
			text-decoration: none;
			font-size: 1.6rem;
			line-height: 1.5;
			margin: auto 2rem;
			transition: 0.3s ease-in-out;

			span {
				display: block;
				position: relative;
				letter-spacing: 1px;
				top: 50%;
				transform: translateY(-50%);
				text-decoration: none;
			}

			&:hover {
				border: 0.2rem solid whitesmoke;
				font-size: 1.6rem;
				cursor: pointer;
				text-decoration: none;
				color: var(--typo3-state-primary-color, #fff);
				box-shadow: none;
				line-height: 1.5;
				transition: 0.3s ease-in-out;

				@media only screen and(max-width: 400px) {
					font-size: 1.1rem;
				}

				@media only screen and(max-width: 300px) {
					font-size: 1.1rem;
				}

				@media only screen and(max-width: 280px) {
					font-size: 0.9rem;
				}
			}

			@media only screen and(max-width: 680px) {
				margin-bottom: 10px;
			}

			@media only screen and(max-width: 400px) {
				width: 17vh;
				height: 17vh;
				font-size: 1.1rem;
			}

			@media only screen and(max-width: 300px) {
				width: 15vh;
				height: 15vh;
				font-size: 1.1rem;
			}

			@media only screen and(max-width: 280px) {
				font-size: 0.9rem;
			}
		}

		.settings {
			background-color: var(--typo3-state-primary-bg, #0078e6);
			border: 0.2rem solid var(--typo3-state-primary-border-color, #005db3);
		}

		@media only screen and(max-width: 680px) {
			position: unset;
		}
	}
}

.footer {
	position: absolute;
	bottom: 1rem;
	width: 98%;
	text-align: center;

	@media only screen and(max-width: 475px) {
		position: unset;
	}
}

.settings {
	padding: 2rem;

	.middle {
		display: flex;
		padding: 2rem;

		@media only screen and(max-width: 750px) {
			flex-flow: wrap;
			justify-content: center;
		}

		.container {
			padding: 2rem;
			width: 45%;
			margin: 0 5%;
			border: solid 1px @color-grey;
			background-color: var(--typo3-surface-container-base, #eee);
			border-radius: 0.125rem;

			p {
				margin-bottom: 50px;
			}

			select {
				padding: 4px;
			}

			input {
				padding: 1px;
			}

			.btn {
				&.btn-primary {
					margin: 0;
				}

				form {
					width: 100%;

					input {
					}
				}
			}

			@media only screen and (max-width: 1185px) {
				min-width: 300px;
				.btn {
					&.btn-primary {
						margin-top: 10px;
					}
				}
			}

			@media only screen and (max-width: 850px) {
				min-width: 250px;
			}

			@media only screen and(max-width: 750px) {
				margin-bottom: 10px;
				min-width: 80%;

				.btn {
					&.btn-primary {
						margin-top: 0;
					}
				}
			}

			@media only screen and (max-width: 616px) {
				.btn {
					&.btn-primary {
						margin-top: 10px;
					}
				}
			}

			@media only screen and (max-width: 560px) {
				input {
					max-width: 100px;
				}

				select {
					margin-top: 10px;
				}
			}

			@media only screen and (max-width: 400px) {
				min-width: 200px;
				.container {
					form {
						font-size: 10px;
					}
				}
			}
		}
	}
}

.form-select-sm {
	background-color: var(--typo3-input-bg, #fefefe);
	width: 200px;
	height: 3rem;
	font-size: 1.4rem;
	padding: 0.375rem 2.25rem 0.375rem 0.5rem;
	font-weight: 400;
	box-shadow: inset 0 1px 2px rgb(0 0 0 / 8%);

	option {
		padding-top: 2px;
		padding-bottom: 2px;
	}
}

.pagination li a {
	font-size: 1.3rem;
}

.btn {
	&.btn-primary {
		font-size: 1.3rem;
		height: 3rem;
		width: 10rem;
		padding: 0.5rem;
		margin-bottom: auto;
		margin-top: auto;
		background-color: var(--typo3-state-primary-bg, #0078e6);
		color: var(--typo3-state-primary-color, #fff);
	}

	&.btn-critical {
		font-size: 1.3rem;
		height: 3rem;
		width: 10rem;
		padding: 0.5rem;
		margin-bottom: auto;
		margin-top: auto;
		color: var(--typo3-state-danger-color, white);
		background-color: var(--typo3-state-danger-bg, #c83c3c);
	}
}

